# sentinela-bayes-br

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
data/processed/: README.md  cohort_panel.parquet  sigbm_canonical.parquet
data/raw/: README.md
data/raw/insar/: README.md
data/scripts/: README.md  build_cohort.py  build_insar_features.py  build_terrain.py  clean_sigbm.py  export_viz_data.py
docs/: 00-overview.md  01-problem.md  02-related-work.md  03-data.md  04-methods.md  05-research-questions.md  06-ethics-and-limitations.md  refs.bib
experiments/: README.md
experiments/00_baselines/: README.md  config.yaml  run.py
experiments/01_first_prediction/: README.md  config.yaml  run.py
experiments/02_fundao_retrospective/: README.md  run.py
experiments/03_b1_brumadinho_retrospective/: README.md  run.py
notebooks/: README.md
paper/: README.md  build_latex.sh  build_pdf.sh  make_figures.py  make_overleaf_bundle.sh  make_tables.py  manuscript.md  manuscript.tex  preamble.tex  titlepage.tex
paper/tables/: t1_cohort_by_method.csv  t2_posterior_rates.csv  t3_top15.csv  t4_retrospective.csv  t5_model_structure.csv  tables.md
src/sentinela/: __init__.py  cli.py
src/tailings_risk/: __init__.py  cli.py  config.py
tests/: test_baselines.py  test_hierarchical.py  test_insar_features.py  test_metrics.py  test_sigbm.py
viz/: README.md  index.html
viz/data/: brazil_outline.json  dams.json  summary.json  terrain.json
viz/js/: main.js
(+30 files in other folders)
