[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tailings-risk"
version = "0.0.1"
description = "Per-dam probabilistic failure-risk modelling for Brazilian mine-tailings storage facilities."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Viktor Smirnov" },
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyarrow>=15",
    "polars>=0.20",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "basedosdados>=2.0",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "statsmodels>=0.14",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "tabpfn>=8.0",
    "pymc>=5.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
    "pre-commit>=3.6",
]
insar = [
    "mintpy>=1.5",
    "asf-search>=7.0",
    "hyp3-sdk>=6.0",
]

[project.scripts]
tailings-risk = "tailings_risk.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
